# Online_OJ_platform

./: .gitignore  AGENTS.md  CMakeLists.txt  SPEC.md  config.yaml  docker-compose.yml  install_all.sh
backend/: CMakeLists.txt  Dockerfile
backend/src/: auth.cc  auth.h  main.cpp  router.cc  router.h
backend/src/db/: connection_pool.cc  connection_pool.h
backend/src/handlers/: auth_handler.cc  auth_handler.h  problem_handler.cc  problem_handler.h  submission_handler.cc  submission_handler.h  user_handler.cc  user_handler.h
backend/src/judge/: judge_manager.cc  judge_manager.h  judge_result.cc  judge_result.h
backend/src/models/: problem.cc  problem.h  submission.cc  submission.h  testcase.cc  testcase.h  user.cc  user.h
backend/src/utils/: config.cc  config.h  json.cpp  json.h  logger.cc  logger.h
docs/: DEPENDENCIES.md  FRONTEND_OPTIMIZATION.md
docs/reference/: editor-ref.html  problems-ref.html
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  auth.js  router.js
frontend/js/pages/: admin.js  history.js  home.js  login.js  problemDetail.js  problemList.js  profile.js  submissionResult.js
judge_image/: Dockerfile  judge_entrypoint.sh
sql/: init.sql  seed.sql
tests/: CMakeLists.txt
tests/unit/: test_auth.cc  test_config.cc  test_config.yaml  test_connection_pool.cc  test_json.cc  test_judge_result.cc  test_logger.cc  test_problem_model.cc  test_submission_model.cc  test_testcase_model.cc  test_thread_pool.cc  test_user_model.cc
